--- a/flappyBird.css
+++ b/flappyBird.css
@@ -23,8 +23,8 @@ transition: 1s;
 
 .game{
     
-    height: 500px;
-    width: 80%;
+    height: 100vh;
+    width: 100%;
     background-color: bisque;
     box-shadow: 0px 0px 6px 1px;
     position: absolute;
